# python_labs

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/lab08/: students_output.json
data/lab09/: students.csv
data/samples/: people.csv  people.json
lib/: json_csv.py  text_stats.py
src/lab01/: ex01  ex01.cs  ex02  ex02.cs  ex03  ex04  ex05  ex05.cs
src/lab02/: Ex1  Ex1#python  Ex2  Ex3
src/lab03/: ex01  ex01.py  ex02
src/lab04/: Text.test  ex01.py  ex02.py
src/lab05/: ex01.py  ex02.py
src/lab06/: ex01.py  ex02.py
src/lab07/: ex01.py  ex02.py
src/lab08/: ex01_model.py  ex02.py
src/lab09/: Test_ex01.py  ex01.py
src/lab10/: ex01_structures.py  ex02_linked_list.py
src/lib/: io_txt_csv.py  text_stats.py
tests/: test_json_csv.py  test_text.py
