[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "10 лаб 1-го семестра"
version = "2025.0.0"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.6"
]

dependencies = [
  "requests>=2.32",
  "pandas>=2.2"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/csv_xlsx.py",
    "*/text.py",
    "*/text_stats.py",
    "*/text.py",
    "*/io_text_csv.py",
    "*/text_report.py",
    "*/tuples.py",
    "*/lib/io_helper.py*",
    "*/table.py",
    "*/cases.py",
    "*/stats.py",
    "*/__init__.py"
]